Fix preview sizing issue on mobile
width: 100%; causes the element to overflow the container width,
creating ugly boxes on mobile.

--- a/src/components/preview.module.scss
+++ b/src/components/preview.module.scss
@@ -1,9 +1,7 @@
 @import '../colors';
 @import '../constants';
 
-.preview {
-    width: 100%;
-}
+
 
 .label {
     --series-color: var(--gray);
